# path_mapping

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: path_mapping.launch
src/: FilterCloud.cpp  cloud_processing.cpp  recognize_sidewalk_kinect.cpp
